@@ -40,6 +40,8 @@
     <codec.version>1.10</codec.version>
     <!-- NOTE: sync tukaani version with commons-compress in tika-parent-->
     <tukaani.version>1.8</tukaani.version>
+    <!-- NOTE: sync brotli version with commons-compress in tika-parent-->
+    <brotli.version>0.1.2</brotli.version>
     <mime4j.version>0.8.1</mime4j.version>
     <vorbis.version>0.8</vorbis.version>
     <pdfbox.version>2.0.9</pdfbox.version>
@@ -149,6 +151,11 @@
       <groupId>org.tukaani</groupId>
       <artifactId>xz</artifactId>
       <version>${tukaani.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.brotli</groupId>
+      <artifactId>dec</artifactId>
+      <version>${brotli.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.luben</groupId>
