@@ -4,6 +4,8 @@ Release 2.0.0 - ???
    * Remove deprecated Metadata keys/properties (TIKA-1974).
 
    Other changes
+   * Add support for brotli (TIKA-2621).
+
    * Upgrade PDFBox to 2.0.9 and include new jbig2-imageio
      from org.apache.pdfbox (TIKA-2579 and TIKA-2607).
 
